--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,14 +40,14 @@ body {
     background-repeat: no-repeat;
 }
 
-
+/* commented out, does not work, wrong size
     #joe-sign {
     height: 200px;
     width: 200px;
     background-color: rgba(241, 109, 107, .7);
     background-repeat: no-repeat;
 }
-
+*/
 /* Footer */
 
 .footer-container {
