--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 /* import font here */
+@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Hind+Madurai:wght@300&display=swap');
 
 *{
     margin: 0;
@@ -7,34 +8,49 @@
 }
 
 body {
+    font-family: 'Hind Madurai', sans-serif;
+}
 
+h1, h2 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 3px;
 }
 
 /* header and navigation */
 
+header {
+    background-color: green;
+    height: 100px;
+}
+
 #logo {
     float: left;
     margin-left: 30px;
+    margin-top: 10px;
+    font-size: 500%;
+    letter-spacing: 5px;
 }
 
 #menu li {
     float: right;
     list-style-type: none;
-    margin-right: 30px;
+    margin: 55px 30px 0 0;
+    font-size: 150%;
 }
+
 
 /* Hero image and Joe-sign overlay */
 
 #hero-outer {
-    height: 600px;
+    height: 800px;
     width: 100%;
     overflow: hidden;
 
     position: relative;
 }
-
+/*
 #hero-image {
-    height: 800px;
+    height: 1200px;
     background-image: url('../images/logan-meis-7qLT-Msda1k-unsplash.jpg');
     background-color: aquamarine;
     background-repeat: no-repeat;
@@ -48,6 +64,89 @@ body {
     background-repeat: no-repeat;
 }
 */
+
+/* services */
+
+#services{
+    height: 600px;
+
+}
+
+#left-about{
+    padding-top: 30px;
+    width: 33%;
+    float: left;
+}
+
+#right-about{
+    padding-top: 30px;
+    width: 33%;
+    float: right;
+}
+
+#center-about{
+    width: 33%;
+    margin: 0 auto;
+}
+
+.left-about-heading{
+    width: 60%;
+    float: right;
+    line-height: 20px;
+    clear: both;
+    margin-bottom: 50px;
+}
+
+.right-about-heading{
+    width: 60%;
+    float: left;
+    line-height: 20px;
+    clear: both;
+    margin-bottom: 50px;
+}
+
+.right-about-heading h2 {
+    text-align: right;
+}
+
+.right-about-heading p {
+    text-align: right;
+}
+
+hr{
+    border-top: 1px solid #3a3a3a;
+    width: 100%;
+    margin: 5px 0;
+}
+
+#welcome {
+    text-align: center;
+    margin: 20px 0;
+    font-size: 280%;
+}
+
+#circle-container {
+    height: 300px;
+    width: 300px;
+    padding: 10px;
+    border-style: solid;
+    border-color: black;
+    border-width: 15px;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+
+#circle-cover-bg {
+    border: red solid 2px;
+    height: 100%;
+    border-radius: 50%;
+}
+
+#circle-services {
+    text-align: center;
+    font-size: 200%;
+    padding: 45% 0;
+}
 /* Footer */
 
 .footer-container {
