--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,11 +45,12 @@ header {
 }
 
 #menu a:hover{
-    border-bottom: 1px solid aliceblue;
+    border-bottom: 1px solid rgb(0, 238, 255);
+    color:rgb(0, 238, 255)
 }
 
 .active{
-    border-bottom: 1px solid aliceblue;
+    border-bottom: 1px solid rgb(0, 238, 255);
 }
 
 /* Add strobe effect to 24 hour service */
@@ -58,7 +59,7 @@ header {
     font-size: 5rem;
     text-align: center;
     position: relative;
-    top: 40%;
+    top: 60%;
 }
 
 #all-day-service::before {
