--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     border: none;
+    box-sizing: border-box;
 }
 
 /* header area */
@@ -113,6 +114,11 @@ header {
     height: 600px;
 }
 
+#details > div {
+    margin-left: 30px;
+    bottom: 30px;
+}
+
 #map {
     float: right;
 }
@@ -144,4 +150,30 @@ footer {
     height: 300px;
     width:100%;
     background-color: #2e424d;
+}
+
+/* media queries */
+
+/* for larger to medium screens from 1200px wide and down */
+
+@media screen and (max-width: 1200px) {
+    
+}
+
+/* for medium size screens 950px and down */
+@media screen and (max-width: 950px) {
+    
+    #menu {
+        clear: left;
+        float: left;
+        margin-left: 30px;
+        margin-bottom: 20px;
+        line-height: 25px;
+    }
+
+}
+
+/* For small screens 800px and smaller */
+@media screens and (max-width: 800px) {
+    
 }
