add querie  to make map and details to stack

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,6 +158,18 @@ footer {
 
 @media screen and (max-width: 1200px) {
     
+    #details-map > div {
+        width: 100%;
+        clear: both;
+        height: 300px;
+        padding: 0;
+        float: left;
+    }
+
+    #map {
+        float: left;
+        width: 100%;
+    }
 }
 
 /* for medium size screens 950px and down */
