add font awesome, telephone icon and tools icon to replace tool image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,55 +75,11 @@ header {
 /* Add strobe effect to 24 hour service */
 #all-day-service {
     color: rgb(0, 238, 255);
-    font-size: 4rem;
+    font-size: 4vw;
     text-align: center;
     position: relative;
     top: 60%;
-}
-
-#all-day-service::before {
-    position: absolute;
-    content: attr(data-text);
     text-shadow: 0px 0px 20px rgb(0, 238, 255);
-    filter: blur(10px) brightness(0);
-    animation: flicker 2s linear forwards;
-    animation-delay: 1s;
-}
-
-@keyframes flicker {
-    0% {
-        filter: blur(5px) brightness(1);
-    }
-    3% {
-        filter: blur(5px) brightness(0);
-    }
-    6% {
-        filter: blur(5px) brightness(0);
-    }
-    7% {
-        filter: blur(5px) brightness(1);
-    }
-    8% {
-        filter: blur(5px) brightness(0);
-    }
-    9% {
-        filter: blur(5px) brightness(1);
-    }
-    10% {
-        filter: blur(5px) brightness(0);
-    }
-    20% {
-        filter: blur(5px) brightness(1);
-    }
-    50% {
-        filter: blur(5px) brightness(1);
-    }
-    750% {
-        filter: blur(5px) brightness(0);
-    }
-    100% {
-        filter: blur(5px) brightness(1);
-    }
 }
 
 /* Find us section with map and details */
@@ -133,8 +89,7 @@ header {
 }
 
 #details > div {
-    padding-top: 200px;
-    padding-left: 30px;
+    padding: 30px 30px;
     bottom: 30px;
 }
 
@@ -207,7 +162,7 @@ footer {
     #details-map > div {
         width: 100%;
         clear: both;
-        height: 300px;
+        height: auto;
         padding: 0;
         float: left;
     }
@@ -216,6 +171,7 @@ footer {
         float: left;
         width: 100%;
     }
+
 }
 
 /* for medium size screens 950px and down */
@@ -237,7 +193,10 @@ footer {
         line-height: 25px;
     }
 
-    
+    #all-day-service {
+        float: left;
+        margin-left: 30px;
+    }
 }
 
 /* For small screens 800px and smaller */
