--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,11 +13,18 @@ body {
     color: #2e424d;
 }
 
-h1, h2 {
+h1, h2{
     font-family: 'Open Sans', sans-serif;
     font-weight: 500;
     text-transform: uppercase;
     font-size: 250%;
+}
+
+h3 {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 500;
+    text-transform: uppercase;
+    font-size: 150%;
 }
 
 /* header area */
@@ -40,6 +47,7 @@ header {
     text-transform: none;
     float: left;
     margin: 30px 0 0 30px;
+    letter-spacing: 2px;
 }
 
 #menu {
@@ -121,6 +129,7 @@ button {
   border: 0;
   font-size: 16px;
   touch-action: manipulation;
+  margin-left: 200px;
 }
 
 button:hover {
@@ -133,17 +142,28 @@ button:hover {
     height: 600px;
     width: 50%;
     float:left;
-    background-color: blue;
+    background-color: rgba(91, 130, 145, 0.4);
+    text-align: center;
+    padding-top: 200px;
+    margin-right: 30px;
 }
 
-#tools img {
-    width: 100%;
-    height: 600px;
-}
+ #tools > h2 {
+    margin-top: 0.25em;
+ }
 
 #services {
     background-color: #eaebed;
     height: 600px;
+    padding-top: 30px;
+    padding-right: 30px;
+}
+
+#services > h4 {
+    padding-top: 20px;
+    padding-bottom: 50px;
+    text-align: right;
+    text-shadow: 0 0 5px #98dad9, 0 0 10px #98dad9, 0 0 15px #98dad9, 0 0 20px #98dad9, 0 0 30px #98dad9, 0 0 40px #98dad9, 0 0 55px #98dad9, 0 0 75px #98dad9;
 }
 
 /* Add style to footer */
