--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,6 +111,7 @@ header {
 #details {
     background-color: #eaebed;
     height: 600px;
+    width: 50%;
 }
 
 #details > div {
@@ -208,7 +209,18 @@ footer {
         float: left;
         width: 100%;
     }
+    
+    #tools {
+        clear: right;
+        height:auto;
+        width: 100%;
+        padding: 30px;
+    }
 
+    #services {
+        clear: left;
+        height: auto;
+    }
 }
 
 /* for medium size screens 950px and down */
@@ -233,7 +245,10 @@ footer {
     #all-day-service {
         float: left;
         margin-left: 30px;
+        clear: left;
+        top: 40%;
     }
+
 }
 
 /* For small screens 800px and smaller */
