--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,6 +184,29 @@ button:hover {
     text-shadow: 0 0 5px #98dad9, 0 0 10px #98dad9, 0 0 15px #98dad9, 0 0 20px #98dad9, 0 0 30px #98dad9, 0 0 40px #98dad9, 0 0 55px #98dad9, 0 0 75px #98dad9;
 }
 
+/* Add style to Customer section*/
+
+#customer {
+    height: 600px;
+    text-align: center;
+    padding: 200px 100px;
+}
+
+#customer-quotes > div {
+    color: #2e424d;
+    width: 33%;
+    height: 300px;
+    float: left;
+    padding: 60px 80px 0 80px;
+    text-align: center;
+    box-sizing: border-box;    
+}
+
+#customer-quotes p {
+    float: right;
+    font-weight: bold;
+}
+
 /* Add style to footer */
 footer {
     height: 300px;
