--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -427,6 +427,26 @@ input[type=text], input[type=email], select {
 /* for medium size screens 950px and down */
 @media screen and (max-width: 950px) {
     
+    header {
+        height: 100vh;
+        background-image: url('../images/claude-gabriel-p3vvMhj_qjU-unsplash.jpg');
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+        background-color: #eaebed;
+    }
+    
+    .sub-page-header {
+        height: 50vh;
+        background-image: url('../images/claude-gabriel-p3vvMhj_qjU-unsplash.jpg');
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+        background-color: #eaebed;
+    }
+
     #company-name {
         color:aliceblue;
         font-size: 200%;
@@ -444,10 +464,11 @@ input[type=text], input[type=email], select {
     }
 
     #all-day-service {
-        float: left;
+        text-align: center;
         margin-left: 30px;
         clear: left;
         top: 40%;
+        font-size: 8vw;
     }
 
     .column {
