--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,11 +124,12 @@ header {
     background-color: rgba(91, 130, 145, 0.4);
     text-align: center;
     padding-top: 200px;
-    margin-left: 30px;
+    margin: 0;
 }
 
 #intro {
     padding-left: 30px;
+    width: 50%;
 }
 
 #intro > h3 {
@@ -361,7 +362,7 @@ input[type=text], input[type=email], select {
 
 @media screen and (max-width: 1200px) {
     
-    #details-map > div {
+    #about-joe > div {
         width: 100%;
         clear: both;
         height: auto;
@@ -380,8 +381,8 @@ input[type=text], input[type=email], select {
         width: 100%;
         padding: 30px;
     }
-
-    .services {
+    
+    .services, #about {
         width: 100%;
         clear: left;
         height: auto;
