--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -366,7 +366,7 @@ input[type=text], input[type=email], select {
         width: 100%;
         clear: both;
         height: auto;
-        padding: 0;
+        padding: 10px;
         float: left;
     }
 
@@ -379,10 +379,24 @@ input[type=text], input[type=email], select {
         clear: right;
         height:auto;
         width: 100%;
-        padding: 30px;
+        padding: 10px;
     }
     
-    .services, #about {
+    .services {
+        width: 100%;
+        clear: left;
+        height: auto;
+        padding: 10px;
+    }
+
+    #about {
+        width: 100%;
+        clear: left;
+        height: auto;
+        padding: 10px;
+    }
+
+    #intro {
         width: 100%;
         clear: left;
         height: auto;
@@ -452,7 +466,7 @@ input[type=text], input[type=email], select {
         color:aliceblue;
         font-size: 200%;
         float: left;
-        margin: 30px 0 0 30px;
+        margin: 30px 0 30px 30px;
     }
 
     #menu {
@@ -460,16 +474,16 @@ input[type=text], input[type=email], select {
         clear: left;
         float: left;
         margin-left: 30px;
-        margin-bottom: 20px;
-        line-height: 25px;
+        line-height: 5px;
+        background-color: rgba(91, 130, 145, 0.7);
     }
 
     #all-day-service {
         text-align: center;
         margin-left: 30px;
         clear: left;
-        top: 40%;
-        font-size: 8vw;
+        top: 50%;
+        font-size: 7vw;
     }
 
     .column {
@@ -488,5 +502,3 @@ input[type=text], input[type=email], select {
 
 /* For small screens 800px and smaller */
 @media screens and (max-width: 800px) {
-    
-}
